feat: обновление структуры заказа и API для создания франшизных заказов
Удалены устаревшие поля warehouseId и branchId из интерфейса CreateFranchisingOrderPayload. Обновлена логика API для создания заказа с добавлением обработки ошибок и возврата нового поля id. Изменены компоненты страницы создания заказа для отображения информации о пункте выдачи из сессии и улучшения пользовательского интерфейса.
